@@ -1,3 +1,15 @@
+2014-11-03  Hale Wang  <hale.wang@arm.com>
+
+	* Makefile.in (tree-switch-shortcut): New object file.
+	* common.opt (-ftree-switch-shortcut): New option.
+	* opts.c: Likewise.
+	* params.def: Define the maxinum number of instructions and paths
+	to duplicate when shortcutting a switch.
+	* passes.def (pass_tree_switch_shortcut): New pass.
+	* timevar.def (TV_TREE_SWITCH_SHORTCUT): Define new value.
+	* tree-pass.h (make_pass_tree_switch_shortcut): New pass.
+	* tree-switch-shortcut.c: New file.
+
 2014-09-29  James Clarke  <jrtc27@jrtc27.com>
 	    Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
 
